honeypot/iptables-save.v4
# Generated by iptables-save v1.6.0 on Wed Jul 24 09:43:11 2019
# iptables rules to redirect all traffic to the honeypot on ip 192.168.56.101
# except for ssh (22) and VNC (5901) from a chosen IP range
# in this example all IPs from the University of Twente 130.89.0.0/16
# some ports are redirected to a common port, such as port 2323 and 23023 as alternative ports from telnet, to allow for more possible attacks. These rules were chosen on the most common ports on RouterOS devices.

*nat
:PREROUTING ACCEPT [113:14969]
:INPUT ACCEPT [111:13901]
:OUTPUT ACCEPT [361:22903]
:POSTROUTING ACCEPT [0:0]
-A PREROUTING -i eth0 -p tcp -m tcp --dport 2323 -j DNAT --to-destination 192.168.56.101:23
-A PREROUTING -i eth0 -p tcp -m tcp --dport 23023 -j DNAT --to-destination 192.168.56.101:23
-A PREROUTING -i eth0 -p tcp -m tcp --dport 2121 -j DNAT --to-destination 192.168.56.101:21
-A PREROUTING -i eth0 -p tcp -m tcp --dport 3128 -j DNAT --to-destination 192.168.56.101:8080
-A PREROUTING -p tcp -m multiport ! --dports 22,5901 -j DNAT --to-destination 192.168.56.101
-A PREROUTING -p udp -j DNAT --to-destination 192.168.56.101
-A PREROUTING ! -s 130.89.0.0/16 -p tcp -m tcp --dport 22 -j DNAT --to-destination 192.168.56.101:22
-A POSTROUTING -o eth0 -j MASQUERADE
-A POSTROUTING -j MASQUERADE
COMMIT
# Completed on Wed Jul 24 09:43:11 2019
# Generated by iptables-save v1.6.0 on Wed Jul 24 09:43:11 2019
*filter
:INPUT ACCEPT [5702:25455188]
:FORWARD ACCEPT [1232:126182]
:OUTPUT ACCEPT [4012:386431]
-A INPUT -s 130.89.0.0/16 -p tcp -m tcp --dport 5901 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 5901 -j DROP
COMMIT
# Completed on Wed Jul 24 09:43:11 2019
